--- a/index.Rmd
+++ b/index.Rmd
@@ -52,13 +52,17 @@ There are also many graphical user interfaces (GUIs), but each of them works dif
 
 However if you are a 'non-computer-savvy' person that won't mean a thing to you. Bash is the language that you will learn to love as much of everyday Linux life is done/can be done using the Terminal. You will soon learn that most things can be done through both GUI (Graphical User Interface) and CLI (Command Line Interface), however some things are more easily achieved from one or the other. For example, changing file permissions of a folder and all its sub folders is more easily achieved using cli instead gui.
 
-Bash, is the default shell on Linux and Mac OS X. Bash shell scripting, like also `R` or `Python`, allows multiple commands to be combined, facilitating automation. 
+Bash, is the default shell on Linux and Mac OS X. Bash shell scripting, like also `R` or `Python`, allows multiple commands to be combined, facilitating automation.
 
 A shell script (shell program) is a text file that contains commands that are interpreted by the shell (see below, we will learn how to write a shell script).
 
 Each command can be linked in a script to combine several commands by providing the output of one as input to the other. Shell scripts can also contain the control structures common to the majority of programming languages (i.e. variables, logic constructs, looping constructs, functions and comments). The main distinction between shell programs and those written in C, C++, Java (to name but a few) is that shell programs are not compiled for execution, but are readily interpreted by the shell.
 
-## Launching the terminal
+## What is the Shell?
+
+At its base, a shell is simply a macro processor that executes commands.
+
+## Launching the Shell: terminal!
 
 **Keyboard Shortcut**: `Ctrl + Alt + T` 
 
@@ -230,12 +234,14 @@ Now via the terminal we can acces GDAL directly!!! E.g. we can check out what th
 Let's download a file from [Lesson 4 and Raster object manipulations](https://geoscripting-wur.github.io/IntroToRaster/#raster-objects-manipulations):
 Download the `gewata.zip` file from Github ([link](https://github.com/GeoScripting-WUR/IntroToRaster/raw/gh-pages/data/gewata.zip)) and unzip in the data folder. Type the following in the data folder:
 
-You can write a shell script to do the following below but first type in the commands via the terminal to understand what is happening:
+You can write a shell script to do the following commands below but first type in the commands via the terminal to understand what is happening:
 
 ```{r, engine='bash'}
 echo "the current GDAL version is:"
 gdal-config --version
 ```
+
+One of the easiest and most useful commands in GDAL is `gdalinfo`. When given an image as an argument, it retrieves and prints all relevant information that is known about the file. This is especially useful if the image contains additional tag data, as is the case with `TIF` files.
 
 Using gdalinfo:
 
@@ -262,6 +268,13 @@ echo "* remove the input temporary file"
 rm input.tif
 ```
 
+Challenge:
+
+- try to write to calculate the NDVI using the lines above in out nice and short shell script.
+- Hint 1: `cd ../data` (to move back from the Bash folder and move into the data folder)
+- Hint 2: No spaces are allowed and e.g. try to use `fn=$(ls *.tif)`
+
+Let's now check if the range of the NDVI values makes sense:
 ```{r, engine='bash', results='hide'}
 cd data
 echo "* list all files"
@@ -271,39 +284,37 @@ gdalinfo -hist -stats ndvi.tif
 ```
 
 More info here on the power of GDAL via the terminal:
-http://www.gdal.org/ and gdalinfo
+http://www.gdal.org/ and `gdalinfo`
 
 Handy functions are (See the examples at the bottom):
 
 - `gdal_translate`: http://www.gdal.org/gdal_translate.html
 - `gdalwarp`: http://www.gdal.org/gdalwarp.html
 
+More info about `Bash` basics: https://www.gnu.org/software/bash/manual/bashref.html#Command-Substitution
+
+Optional: if you are ready and want the learn more about using GDAL from the terminal. See here for another tutorial:
+http://wiki.americaview.org/display/miview/Introduction+to+GDAL
+
 ### Excercise
 
-Try to write a shell script that looks at the difference between the two files (see Lesson 5 for the files).
+Try to write a shell script that:
+ - resampels the Landsat data to pixels of 100m
+ - reprojects the landsat data to WGS Lat/long (hint: gdalwarp)
+ - convert the *.tif file (i.e. a geotif) to *.png
 
-
-
-
-
-
-See the following tutorial for Geeks! (Warning!: Now you are risking to become a Geek or even computer freak yourself)
-
-- http://www.howtogeek.com/140679/beginner-geek-how-to-start-using-the-linux-terminal/
-- http://www.howtogeek.com/howto/42980/the-beginners-guide-to-nano-the-linux-command-line-text-editor/
-- http://linuxcommand.org/lc3_learning_the_shell.php
-Try to install the following program on Linux
-
-Introduction to use the terminal on Mac//very similar commands on OSGEO-Linux
-
-- http://computers.tutsplus.com/tutorials/navigating-the-terminal-a-gentle-introduction--mac-3855
-- http://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line
+Copy the text of your shell script in an e-mail per team and set it to me. Do not forget to add a teamname and date at the top of your script.
 
 ## More information
 
-- More information
-    * http://www.cyberciti.biz/faq/pwd-linux-unix-command-examples/
-    * 
-- [An overview of terminal commands](http://beginlinux.com/twitter/1094-the-beginners-guide-to-the-ubuntu-terminal)
+See the following tutorial for Geeks! (Warning!: Now you are risking to become a Geek or even computer freak yourself)
 
--More info for Mac users?[Is the terminal in Mac and Linux the same](https://stackoverflow.com/questions/8051145/is-the-terminal-in-mac-and-linux-the-same)
+- [An overview of terminal commands](http://beginlinux.com/twitter/1094-the-beginners-guide-to-the-ubuntu-terminal)
+- http://www.howtogeek.com/140679/beginner-geek-how-to-start-using-the-linux-terminal/
+- http://www.howtogeek.com/howto/42980/the-beginners-guide-to-nano-the-linux-command-line-text-editor/
+- http://linuxcommand.org/lc3_learning_the_shell.php
+- http://www.cyberciti.biz/faq/pwd-linux-unix-command-examples/
+- For Mac users and tntroduction to use the terminal on Mac
+    - http://computers.tutsplus.com/tutorials/navigating-the-terminal-a-gentle-introduction--mac-3855
+    - http://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line
+    - [Is the terminal in Mac and Linux the same](https://stackoverflow.com/questions/8051145/is-the-terminal-in-mac-and-linux-the-same)
